--- a/BERT_Classification_Simple.ipynb
+++ b/BERT_Classification_Simple.ipynb
@@ -690,6 +690,70 @@
     "print(f\"Precision (Macro): {pre:.4f}\")\n",
     "print(f\"Recall (Macro): {recall:.4f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
+      "Collecting nbformat\n",
+      "  Downloading nbformat-5.10.4-py3-none-any.whl (78 kB)\n",
+      "\u001b[K     |████████████████████████████████| 78 kB 5.6 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: jsonschema>=2.6 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from nbformat) (4.23.0)\n",
+      "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from nbformat) (5.7.2)\n",
+      "Requirement already satisfied: traitlets>=5.1 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from nbformat) (5.14.3)\n",
+      "Collecting fastjsonschema>=2.15\n",
+      "  Downloading fastjsonschema-2.21.1-py3-none-any.whl (23 kB)\n",
+      "Requirement already satisfied: referencing>=0.28.4 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from jsonschema>=2.6->nbformat) (0.36.1)\n",
+      "Requirement already satisfied: attrs>=22.2.0 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from jsonschema>=2.6->nbformat) (24.3.0)\n",
+      "Requirement already satisfied: rpds-py>=0.7.1 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from jsonschema>=2.6->nbformat) (0.22.3)\n",
+      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from jsonschema>=2.6->nbformat) (2024.10.1)\n",
+      "Requirement already satisfied: platformdirs>=2.5 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat) (4.3.6)\n",
+      "Requirement already satisfied: typing-extensions>=4.4.0 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from referencing>=0.28.4->jsonschema>=2.6->nbformat) (4.12.2)\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
+      "Installing collected packages: fastjsonschema, nbformat\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
+      "Successfully installed fastjsonschema-2.21.1 nbformat-5.10.4\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 25.1.1 is available.\n",
+      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install nbformat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nbformat\n",
+    "\n",
+    "path = \"BERT_Classification_Simple.ipynb\"\n",
+    "with open(path) as f:\n",
+    "    nb = nbformat.read(f, as_version=4)\n",
+    "\n",
+    "# Remove problematic widget metadata\n",
+    "if 'widgets' in nb['metadata']:\n",
+    "    del nb['metadata']['widgets']\n",
+    "\n",
+    "with open(path, 'w') as f:\n",
+    "    nbformat.write(nb, f)"
+   ]
   }
  ],
  "metadata": {
