--- a/BERT_Classification_Simple.ipynb
+++ b/BERT_Classification_Simple.ipynb
@@ -30,9 +30,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/msawant/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n",
-      "/Users/msawant/Library/Python/3.9/lib/python/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -552,42 +550,42 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 100%|██████████| 55/55 [02:07<00:00,  2.32s/it, loss=0.019] \n"
+      "Epoch 0: 100%|██████████| 55/55 [02:01<00:00,  2.20s/it, loss=0.0276]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 Loss: 0.40237011784179644\n"
+      "Epoch 0 Loss: 0.4692585799843073\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 55/55 [02:10<00:00,  2.37s/it, loss=0.03]  \n"
+      "Epoch 1: 100%|██████████| 55/55 [02:06<00:00,  2.31s/it, loss=0.362] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 Loss: 0.16762877787378702\n"
+      "Epoch 1 Loss: 0.16699306089431049\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2: 100%|██████████| 55/55 [02:22<00:00,  2.60s/it, loss=0.0178] "
+      "Epoch 2: 100%|██████████| 55/55 [02:25<00:00,  2.65s/it, loss=0.00307]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2 Loss: 0.09300337227230722\n"
+      "Epoch 2 Loss: 0.04644448445601897\n"
      ]
     },
     {
@@ -659,10 +657,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy: 0.9220\n",
-      "F1 Score (Macro): 0.9064\n",
-      "Precision (Macro): 0.9415\n",
-      "Recall (Macro): 0.8855\n"
+      "Validation Accuracy: 0.9174\n",
+      "F1 Score (Macro): 0.9022\n",
+      "Precision (Macro): 0.9275\n",
+      "Recall (Macro): 0.8856\n"
      ]
     }
    ],
@@ -711,33 +709,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
-      "Requirement already satisfied: nbformat in /Users/msawant/Library/Python/3.9/lib/python/site-packages (5.10.4)\n",
-      "Requirement already satisfied: jsonschema>=2.6 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from nbformat) (4.23.0)\n",
-      "Requirement already satisfied: traitlets>=5.1 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from nbformat) (5.14.3)\n",
-      "Requirement already satisfied: fastjsonschema>=2.15 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from nbformat) (2.21.1)\n",
-      "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from nbformat) (5.7.2)\n",
-      "Requirement already satisfied: attrs>=22.2.0 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from jsonschema>=2.6->nbformat) (24.3.0)\n",
-      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from jsonschema>=2.6->nbformat) (2024.10.1)\n",
-      "Requirement already satisfied: referencing>=0.28.4 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from jsonschema>=2.6->nbformat) (0.36.1)\n",
-      "Requirement already satisfied: rpds-py>=0.7.1 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from jsonschema>=2.6->nbformat) (0.22.3)\n",
-      "Requirement already satisfied: platformdirs>=2.5 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat) (4.3.6)\n",
-      "Requirement already satisfied: typing-extensions>=4.4.0 in /Users/msawant/Library/Python/3.9/lib/python/site-packages (from referencing>=0.28.4->jsonschema>=2.6->nbformat) (4.12.2)\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -andas (/Users/msawant/Library/Python/3.9/lib/python/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 25.1.1 is available.\n",
-      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Collecting nbformat\n",
+      "  Using cached nbformat-5.10.4-py3-none-any.whl (78 kB)\n",
+      "Collecting fastjsonschema>=2.15\n",
+      "  Using cached fastjsonschema-2.21.1-py3-none-any.whl (23 kB)\n",
+      "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in /Users/msawant/Library/Python/3.10/lib/python/site-packages (from nbformat) (5.7.2)\n",
+      "Requirement already satisfied: traitlets>=5.1 in /Users/msawant/Library/Python/3.10/lib/python/site-packages (from nbformat) (5.14.3)\n",
+      "Requirement already satisfied: jsonschema>=2.6 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from nbformat) (4.23.0)\n",
+      "Requirement already satisfied: attrs>=22.2.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (24.3.0)\n",
+      "Requirement already satisfied: rpds-py>=0.7.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (0.22.3)\n",
+      "Requirement already satisfied: referencing>=0.28.4 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (0.36.1)\n",
+      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (2024.10.1)\n",
+      "Requirement already satisfied: platformdirs>=2.5 in /Users/msawant/Library/Python/3.10/lib/python/site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat) (4.2.2)\n",
+      "Requirement already satisfied: typing-extensions>=4.4.0 in /Users/msawant/Library/Python/3.10/lib/python/site-packages (from referencing>=0.28.4->jsonschema>=2.6->nbformat) (4.12.2)\n",
+      "Installing collected packages: fastjsonschema, nbformat\n",
+      "Successfully installed fastjsonschema-2.21.1 nbformat-5.10.4\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.3; however, version 25.1.1 is available.\n",
+      "You should consider upgrading via the '/usr/local/bin/python3.10 -m pip install --upgrade pip' command.\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -748,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.0"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
